turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:11: error: not found: value j
	var etat=j
                 ^Turmite:12: error: not found: value j
	if (rule(j)(I)(MVT_SUIVANT)==8) {
                 ^Turmite:19: error: not found: value j
	else if (rule(j)(I)(MVT_SUIVANT)==0) {
                      ^Turmite:24: error: not found: value j
	else if (rule(j)(I)(MVT_SUIVANT)==1) {
                      ^Turmite:30: error: not found: value j
	else if (rule(j)(I)(MVT_SUIVANT)==4) {
                      ^Turmite:38: error: not found: value j
	else if (rule(j)(I)(MVT_SUIVANT)==2) {
                      ^